# scanner-plus

./: .gitignore  CMakeLists.txt  Dockerfile  DocumentScanner.h  Makefile  Readme.md  ScannedDocument.cpp  ScannedDocument.h  ScannedPage.h  imageProcessing.cpp  main.cpp  scanner.cpp  scanner.h
include/scanner/: DocumentScanner.h  IScannerHardware.h  SaneScanner.h  ScannedDocument.h  ScannedPage.h  TestScanner.h  imageProcessing.h  scanner.h  scanner_api.h
src/: DocumentScanner.cpp  SaneScanner.cpp  ScannedDocument.cpp  ScannedPage.cpp  TestScanner.cpp  imageProcessing.cpp  scanner.cpp  scanner_api.cpp
test/: test.cpp  test.py  tests.cpp
